Closed
Bug 1474311
Opened 7 years ago
Closed 5 years ago
Svg image fires error events before it is loaded
Categories
(Core :: SVG, defect, P3)
Core
SVG
Tracking
()
VERIFIED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox83 | --- | verified |
People
(Reporter: al.govorkova, Assigned: longsonr)
References
()
Details
(Keywords: parity-chrome, parity-safari, testcase)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36
Steps to reproduce:
1. Create a SVG element with <image> with valid href using 'implementation.createHTMLDocument'.
2. Get the <image> and paste it inside main document with SVG element.
3. Add two listeners to the image: 'load' and 'error'
All this steps are done here https://codepen.io/anon/pen/ajoEJz?editors=1111
Take a look at console
Issue is reproduced with versions 61 and 63 (nightly)
Actual results:
'error' event is fired two times, then 'loaded' event is fired
Expected results:
Only 'loaded' event is fired
| Reporter | ||
Comment 1•7 years ago
|
||
I also tried to create svg and image using 'new DOMParser().parseFromString', but result is the same:
https://codepen.io/anon/pen/ejOVxR?editors=1111
Updated•7 years ago
|
Updated•7 years ago
|
Component: DOM: Events → SVG
Updated•7 years ago
|
Priority: -- → P3
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•5 years ago
|
||
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/d40bd2d0160e
check whether we should load images r=jwatt
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Updated•5 years ago
|
QA Whiteboard: [qa-83b-p2]
| Assignee | ||
Updated•5 years ago
|
Flags: in-testsuite+
Comment 6•5 years ago
|
||
Reproduced the initial issue using an old Nightly before the fix, verified that this is fixed on Firefox 83.0b10 across platforms (Windows 10 64bit, Ubuntu 18.04 and macOS 11.0)
You need to log in
before you can comment on or make changes to this bug.
Description
•