Bug 1474311 - check whether we should load images r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D93096